<resources>
    <string name="app_name">Claix</string>
    <string name="overlay_btn_main">메인</string>
    <string name="overlay_btn_screen">화면공유</string>
    <string name="overlay_btn_chat">클톡</string>
    <string name="overlay_btn_translate">AI번역</string>
    <string name="overlay_btn_settings">설정</string>
    <string name="overlay_btn_mic">마이크</string>
    <string name="overlay_btn_close">닫기</string>
    <string name="remote_control_accessibility_description">원격 제어를 위해 화면 터치 동작을 실행합니다.</string>
</resources>